Fixing style on smaller screen

--- a/src/styles.css
+++ b/src/styles.css
@@ -29,4 +29,10 @@ h5 {
    }
  }
 
+ @media only screen and (min-width: 768px) {
+   .col-md-4 {
+      max-width: 41.333%;
+   }
+ }
+
  
